--- a/demo/index.html
+++ b/demo/index.html
@@ -1,17 +1,16 @@
 <!doctype html>
 <html>
 	<head>
-		<title>10up Component Library | TenUpScaffold</title>
+		<title>10up Component Library | TenUpAnimations</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link href="../dist/tenup-scaffold.css" rel="stylesheet">
+		<link href="../dist/animations.css" rel="stylesheet">
 	</head>
 	<body>
-		<div class="TenUp_Component">
-		</div>
-		<script src="../dist/tenup-scaffold.js"></script>
+
+		<script src="../dist/animations.js"></script>
 		<script>
-			let TenUpScaffold = new TenUp.TenUpScaffold();
+			let TenUpAnimations = new TenUp.TenUpAnimations();
 		</script>
 	</body>
 </html>
