--- a/demo/index.html
+++ b/demo/index.html
@@ -4,7 +4,7 @@
 		<title>10up Component Library | TenUpAnimations</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link href="../dist/animations.css" rel="stylesheet">
+		<link href="../dist/animate.css" rel="stylesheet">
 		<style>
 			*,
 			*:before,
@@ -51,9 +51,17 @@
 				<label for="js-control">Animation Options</label>
 				<select id="js-control" aria-controls="js-demo-block">
 					<option selected disabled value="">Choose an animation</option>
-					<optgroup label="Fade In/Out">
+					<optgroup label="Fade">
 						<option value="fade-in">Fade In</option>
 						<option value="fade-out">Fade Out</option>
+					</optgroup>
+					<optgroup label="Scale">
+						<option value="scale-down">Scale Down</option>
+						<option value="scale-down-small">Scale Down, Small</option>
+						<option value="scale-down-large">Scale Down, Large</option>
+						<option value="scale-up">Scale Up</option>
+						<option value="scale-up-small">Scale Up, Small</option>
+						<option value="scale-up-large">Scale Up, Large</option>
 					</optgroup>
 					<optgroup label="Shake">
 						<option value="shake-horizontal">Shake Horizontal</option>
@@ -63,13 +71,11 @@
 						<option value="shake-vertical-large">Shake Vertical, Large</option>
 						<option value="shake-vertical-small">Shake Vertical, Small</option>
 					</optgroup>
-					<optgroup label="Slide In">
+					<optgroup label="Slide">
 						<option value="slide-in-down">Slide In, Down</option>
 						<option value="slide-in-left">Slide In, Left</option>
 						<option value="slide-in-right">Slide In, Right</option>
 						<option value="slide-in-up">Slide In, Up</option>
-					</optgroup>
-					<optgroup label="Slide Out">
 						<option value="slide-out-down">Slide Out, Down</option>
 						<option value="slide-out-left">Slide Out, Left</option>
 						<option value="slide-out-right">Slide Out, Right</option>
@@ -78,7 +84,7 @@
 				</select>
 			</div>
 
-			<div id="js-demo-block" class="demo-block animate-duration--750">
+			<div id="js-demo-block" class="demo-block duration--750">
 				Animation Me!
 			</div>
 		</div>
