added rotation options

--- a/demo/index.html
+++ b/demo/index.html
@@ -30,6 +30,12 @@
 											<option  selected value="fade-in">Fade In</option>
 											<option value="fade-out">Fade Out</option>
 										</optgroup>
+										<optgroup label="Rotate">
+											<option value="rotate-90">Rotate 90&deg;</option>
+											<option value="rotate-180">Rotate 180&deg;</option>
+											<option value="rotate-270">Rotate 270&deg;</option>
+											<option value="rotate-360">Rotate 360&deg;</option>
+										</optgroup>
 										<optgroup label="Scale">
 											<option value="scale-down">Scale Down</option>
 											<option value="scale-down-small">Scale Down, Small</option>
