--- a/demo/index.html
+++ b/demo/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 		<link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans&display=swap" rel="stylesheet">
-		<link href="/demo/demo.css" rel="stylesheet">
+		<link href="demo.css" rel="stylesheet">
 		<link href="../dist/animate.css" rel="stylesheet">
 
 		</style>
@@ -69,14 +69,24 @@
 								<div class="custom-select">
 									<select id="js-speed" aria-controls="js-demo-block">
 										<option>
+											<option value="duration-150">150ms</option>
+											<option value="duration-200">200ms</option>
+											<option value="duration-250">250ms</option>
+											<option value="duration-300">300ms</option>
+											<option value="duration-350">350ms</option>
+											<option value="duration-400">400ms</option>
+											<option value="duration-450">450ms</option>
 											<option value="duration-500">500ms</option>
+											<option value="duration-550">550ms</option>
+											<option value="duration-600">600ms</option>
+											<option value="duration-650">650ms</option>
+											<option value="duration-700">700ms</option>
 											<option selected value="duration-750">750ms</option>
+											<option value="duration-800">800ms</option>
+											<option value="duration-850">850ms</option>
+											<option value="duration-900">900ms</option>
+											<option value="duration-950">950ms</option>
 											<option value="duration-1000">1000ms</option>
-											<option value="duration-1500">1500ms</option>
-											<option value="duration-2000">2000ms</option>
-											<option value="duration-2500">2500ms</option>
-											<option value="duration-3000">3000ms</option>
-											<option value="duration-3500">3500ms</option>
 										</option>
 									</select>
 								</div><!--/.custom-select-->
