--- a/demo/index.html
+++ b/demo/index.html
@@ -6,7 +6,172 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 		<link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans&display=swap" rel="stylesheet">
-		<link href="demo.css" rel="stylesheet">
+
+		<style>
+
+		*,
+		*:before,
+		*:after {
+			box-sizing: border-box;
+			padding: 0;
+			margin: 0;
+		}
+
+		body {
+			color: #232323;
+			font-family: 'IBM Plex Sans', sans-serif;
+		}
+
+		label {
+			display: block;
+			margin-bottom: 5px;
+		}
+
+		label, button {
+			cursor: pointer;
+		}
+
+		legend {
+			display: block;
+			font-size: 22px;
+			font-weight: 600;
+			margin-bottom: 8px;
+			padding-left: 8px;
+			width: 100%;
+		}
+
+		fieldset {
+			border: 0;
+			display: block;
+			margin: 0;
+			padding: 0;
+			width: 100%;
+		}
+
+		/* Custom Form Controls */
+		.custom-select {
+			background: #fff;
+			border: 1px solid #ccc;
+			height: 36px;
+			margin-bottom: 1em;
+			overflow: hidden;
+			position: relative;
+		}
+
+		.custom-select:after {
+			border-color: #000 transparent transparent transparent;
+			border-style: solid;
+			border-width: 9px 7px 0 9px;
+			content: '';
+			height: 0;
+			pointer-events: none;
+			position: absolute;
+			right: 10px;
+			speak: none;
+			top: 14px;
+			width: 0;
+		}
+
+		.custom-select select {
+			-webkit-appearance: none;
+			-moz-appearance: none;
+			appearance: none;
+			background: none;
+			border: 0;
+			color: #000;
+			font-family: inherit;
+			font-size: inherit;
+			height: 100%;
+			margin: 0;
+			padding: 0 28px 0 8px;
+			width: 100%;
+			width: 110% \9;
+			z-index: 2;
+		}
+
+		.custom-select select:focus {
+			box-shadow: inset 0 0 0 1px blue;
+			outline: transparent;
+		}
+
+		.custom-select select::-ms-expand {
+			display: none;
+		}
+
+		.custom-select select:-moz-focusring {
+			color: transparent;
+			text-shadow: 0 0 0 #000;
+		}
+
+		.button {
+			border: 2px solid #e31e41;
+			color: #e31e41;
+			cursor: pointer;
+			display: block;
+			font-size: 1rem;
+			letter-spacing: .03em;
+			padding: .5em 1em;
+			text-align: center;
+			text-transform: uppercase;
+			white-space: nowrap;
+			width: 100%;
+		}
+
+		.button:hover,
+		.button:focus {
+			background: #e31e41;
+			color: #fff;
+		}
+
+		/* General Layout */
+		.col {
+			width: 50%;
+			min-width: 50%;
+		}
+
+		.gutter {
+			padding: .5em;
+			width: 100%;
+		}
+
+		/* Demo */
+		.demo-container {
+			margin: 1em auto;
+			max-width: 740px;
+			padding: 0 1em;
+		}
+
+		.demo-wrap {
+			border: 2px dashed #767676;
+			margin: 1em auto;
+			max-width: 300px;
+			padding: 1em;
+		}
+
+		.demo-controls {
+			padding: 0;
+			display: flex;
+			flex-wrap: wrap;
+		}
+
+		.demo-controls label {
+			display: block;
+		}
+
+		.demo-controls select {
+			display: block;
+		}
+
+		.demo-block {
+			background: #212121;
+			color: #eee;
+			line-height: 100px;
+			text-align: center;
+			width: 100%;
+		}
+
+		</style>
+
 		<link href="../dist/animate.css" rel="stylesheet">
 
 		</style>
@@ -112,14 +277,24 @@
 								<select id="js-delay" aria-controls="js-demo-block">
 									<option>
 										<option selected value="">No delay</option>
+										<option value="delay-150">150ms</option>
+										<option value="delay-200">200ms</option>
+										<option value="delay-250">250ms</option>
+										<option value="delay-300">300ms</option>
+										<option value="delay-350">350ms</option>
+										<option value="delay-400">400ms</option>
+										<option value="delay-450">450ms</option>
 										<option value="delay-500">500ms</option>
+										<option value="delay-550">550ms</option>
+										<option value="delay-600">600ms</option>
+										<option value="delay-650">650ms</option>
+										<option value="delay-700">700ms</option>
 										<option value="delay-750">750ms</option>
+										<option value="delay-800">800ms</option>
+										<option value="delay-850">850ms</option>
+										<option value="delay-900">900ms</option>
+										<option value="delay-950">950ms</option>
 										<option value="delay-1000">1000ms</option>
-										<option value="delay-1500">1500ms</option>
-										<option value="delay-2000">2000ms</option>
-										<option value="delay-2500">2500ms</option>
-										<option value="delay-3000">3000ms</option>
-										<option value="delay-3500">3500ms</option>
 									</option>
 								</select>
 							</div><!--/.custom-select-->
