gh-pages src updates

--- a/examples/navigation/index.html
+++ b/examples/navigation/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 		<link rel="stylesheet" href="https://baseline.10up.com/assets/css/main.css" />
-		<link href="./navigation/navigation.css" rel="stylesheet" />
+		<link href="./navigation.css" rel="stylesheet" />
 		<link href="../dist/animate.css" rel="stylesheet" />
 
 		</style>
@@ -96,6 +96,6 @@
 			</div>
 		</main>
 
-		<script src="./navigation/navigation.js"></script>
+		<script src="./navigation.js"></script>
 	</body>
 </html>
