--- a/examples/scrolling/index.html
+++ b/examples/scrolling/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 		<link rel="stylesheet" href="https://baseline.10up.com/assets/css/main.css" />
-		<link href="./scrolling/scrolling.css" rel="stylesheet" />
+		<link href="./scrolling.css" rel="stylesheet" />
 		<link href="../dist/animate.css" rel="stylesheet" />
 
 		</style>
@@ -100,6 +100,6 @@
 
 		</main>
 
-		<script src="./scrolling/scrolling.js"></script>
+		<script src="./scrolling.js"></script>
 	</body>
 </html>
