--- a/examples/navigation/index.html
+++ b/examples/navigation/index.html
@@ -7,7 +7,7 @@
 
 		<link rel="stylesheet" href="https://baseline.10up.com/assets/css/main.css" />
 		<link href="./navigation.css" rel="stylesheet" />
-		<link href="../dist/animate.css" rel="stylesheet" />
+		<link href="../../dist/animate.css" rel="stylesheet" />
 
 		</style>
 	</head>
